--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,7 +70,7 @@ ul li ul{
     display: inline-block;
 }
 
-ul li ul li a{
+ul .dev ul li a{
     position: relative;
     font-size: 16px;
     display: none;
