--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,7 +22,7 @@ h1{
 }
 
 h2{
-    
+    position: relative;
     width: 100%;
     margin: 0 auto;
     font-family: 'Mandalore';
@@ -34,7 +34,7 @@ h2{
 }
 
 .abouttext{
-    
+    position: relative;
     width: 100%;
     margin: 0 auto;
     font-family: 'Arial';
@@ -85,7 +85,7 @@ ul .dev:hover ul li a{
 img{
     width: 100%;
     margin: 0px auto;
-    position: relative;
+    position: absolute;
     top: 20%;
     z-index: -1;
 }
@@ -155,7 +155,6 @@ img{
     ul li ul li a{
         font-size: 24px;
         line-height: 28px;
-        
     }
 
     img{
