--- a/stylesheet.css
+++ b/stylesheet.css
@@ -113,7 +113,7 @@ img{
         line-height: 32px;
     }
 
-    ul li ul li a{
+    ul .dev ul li a{
         font-size: 20px;
         line-height: 24px;
     }
@@ -152,7 +152,7 @@ img{
         line-height: 36px;
     }
 
-    ul li ul li a{
+    ul .dev ul li a{
         font-size: 24px;
         line-height: 28px;
     }
