--- a/stylesheet.css
+++ b/stylesheet.css
@@ -113,6 +113,11 @@ img{
         line-height: 32px;
     }
 
+    ul .dev ul{
+        position: absolute;
+        display: inline-block;
+    }
+
     ul .dev ul li a{
         font-size: 20px;
         line-height: 24px;
