--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ body{
 h1{
     font-family: 'Mandalore';
     font-size: 50px;
-    letter-spacing: 3px;
+    letter-spacing: 0px;
     color: white;
     margin-left: 5px;
     text-align: left;
@@ -135,6 +135,10 @@ img{
     .title{
         font-size: 120;
         text-align: left;
+    }
+
+    h1{
+        letter-spacing: 3px;
     }
 
     h2{
