--- a/stylesheet.css
+++ b/stylesheet.css
@@ -210,7 +210,10 @@ ul .dev:hover ul li a{
 
     .abouttext{
         position: absolute;
-        top: 45%;
+        font-size: 20px;
+        text-align: justify;
+        width: 50%;
+        top: 50%;
         left: 0;
         right: 0;
     }
