--- a/stylesheet.css
+++ b/stylesheet.css
@@ -113,6 +113,7 @@ ul .dev:hover ul li a{
     border-style: solid;
     border-width: 2px;
     border-color: white;
+    border-radius: 20px;
     left: 4.5%;
 }
 
@@ -124,6 +125,7 @@ ul .dev:hover ul li a{
     border-style: solid;
     border-width: 2px;
     border-color: white;
+    border-radius: 20px;
     left: 5.5%;
 }
 
@@ -135,6 +137,7 @@ ul .dev:hover ul li a{
         border-style: solid;
         border-width: 2px;
         border-color: white;
+        border-radius: 20px;
         left: 4.5%;
 }
 
@@ -146,6 +149,7 @@ ul .dev:hover ul li a{
     border-style: solid;
     border-width: 2px;
     border-color: white;
+    border-radius: 20px;
     left: 5.5%;
 }
 
