--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,6 +23,7 @@ body::-webkit-scrollbar{
 }
 
 h1{
+    position: relative;
     font-family: 'Mandalore';
     font-size: 50px;
     letter-spacing: 0px;
@@ -34,13 +35,13 @@ h1{
 h2{
     position: relative;
     width: 100%;
-    margin: 0 auto;
+    margin: 0px auto;
     font-family: 'Mandalore';
     font-size: 36px;
     letter-spacing: 3px;
     color: white;
     text-align: center;
-    top: 0%;
+    
 }
 
 .abouttext{
@@ -149,13 +150,13 @@ ul .dev:hover ul li a{
 @media only screen and (min-width: 768px) {
     
     .title{
-        font-size: 72;
+        font-size: 100px;
         text-align: left;
     }
 
     h2{
-        font-size: 72px;
-        background-color: black;
+        font-size: 100px;
+        text-align: center;
     }
 
     .abouttext{
@@ -198,7 +199,7 @@ ul .dev:hover ul li a{
         position: absolute;
     }
 
-    h1{
+    .title{
         font-size: 120px;
         letter-spacing: 3px;
         text-align: left;
@@ -206,9 +207,10 @@ ul .dev:hover ul li a{
 
     h2{
         position: absolute;
-        font-size: 90px;
-        background: none;
-        top: 5;
+        font-size: 120px;
+        text-align: right;
+        top: 0;
+        right: 20px;
     }
 
     .abouttext{
