--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,9 +18,9 @@ body{
     padding: 0;
 }
 
-body::-webkit-scrollbar{
+/*.abouttext::-webkit-scrollbar{
     display: none;
-}
+}*/
 
 h1{
     position: relative;
