--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,6 +62,19 @@ ul li a{
     text-decoration: none;
 }
 
+ul .dev{
+    display: inline-block;
+}
+
+ul .dev ul li a{
+    font-size: 16px;
+    display: none;
+}
+
+ul .dev:hover ul li a{
+    display: initial;
+}
+
 .logo{
     width: 100%;
     margin: 0px auto;
