--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,7 +63,18 @@ ul li a{
 }
 
 ul .dev{
+    position: relative;
     display: inline-block;
+}
+
+ul .dev ul{
+    position: absolute;
+    display: inline-block;
+    list-style: none;
+}
+
+ul .dev ul li{
+    position: relative;
 }
 
 ul .dev ul li a{
