--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,8 +68,7 @@ ul .dev{
 }
 
 ul .dev ul{
-    position: absolute;
-    display: inline-block;
+    position: relative;
     list-style: none;
 }
 
