--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,6 +70,7 @@ ul .dev{
 ul .dev ul{
     position: relative;
     list-style: none;
+    float: right;
 }
 
 ul .dev ul li{
@@ -88,8 +89,8 @@ ul .dev:hover ul li a{
 .logo{
     width: 100%;
     margin: 0px auto;
-    position: relative;
-    top: 0%;
+    position: absolute;
+    top: 25%;
     z-index: -1;
 }
 
