--- a/stylesheet.css
+++ b/stylesheet.css
@@ -76,6 +76,10 @@ ul li a{
     text-decoration: none;
 }
 
+ul li a:hover{
+    color: rgb(36, 36, 36);
+}
+
 ul .dev ul{
     position: absolute;
     list-style: none;
@@ -230,12 +234,16 @@ ul .dev:hover ul li a{
         font-size: 36px;
     }
 
+    ul .dev{
+        padding-right: 10px;
+    }
+    
     ul .dev ul{
         position: absolute;
+        display: inline-block;
         left: 160px;
         list-style: none;
         background: none;
-        display: inline-block;
         z-index: 1;
         white-space: nowrap;
     }
@@ -244,7 +252,6 @@ ul .dev:hover ul li a{
         font-size: 28px;
     }
     
-
     .logo{
         display: none;
     }
